--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gh-contributions-notifier",
   "version": "1.0.0",
-  "description": "",
+  "description": "Skip leg day, not commit day",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
